Sample/unpackaged/unpackaged/objects/Account.object
<CustomObject>
    <fields>
        <fullName>ADDRESS_TYPE__c</fullName>
        <description>MDM Integration</description>
        <inlineHelpText>Address Type - MDM</inlineHelpText>
        <label>Address Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address1__c</fullName>
        <label>Address1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address2__c</fullName>
        <description>Account Address Line 2</description>
        <label>Address2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address3__c</fullName>
        <description>Account Address Line 3</description>
        <label>Address3</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Affiliate_Code__c</fullName>
        <description>Affiliate Code</description>
        <label>Affiliate Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BUSINESS_SUBTYPE__c</fullName>
        <description>MDM Integration</description>
        <inlineHelpText>Business Sub Type - MDM</inlineHelpText>
        <label>Business Subtype</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BASE</fullName>
                </value>
                <value>
                    <fullName>COMPETITIVE</fullName>
                </value>
                <value>
                    <fullName>INDEPENDENT</fullName>
                </value>
                <value>
                    <fullName>OPHTHALMOLOGIST</fullName>
                </value>
                <value>
                    <fullName>OPTICIAN</fullName>
                </value>
                <value>
                    <fullName>OPTOMETRIST</fullName>
                </value>
                <value>
                    <fullName>PARTNER</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BUSINESS_TYPE__c</fullName>
        <description>MDM Integration</description>
        <inlineHelpText>Business Type - MDM</inlineHelpText>
        <label>Business Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BG</fullName>
                </value>
                <value>
                    <fullName>ECP</fullName>
                </value>
                <value>
                    <fullName>IND</fullName>
                </value>
                <value>
                    <fullName>INT</fullName>
                </value>
                <value>
                    <fullName>LAB</fullName>
                </value>
                <value>
                    <fullName>MC</fullName>
                </value>
                <value>
                    <fullName>RET</fullName>
                </value>
                <value>
                    <fullName>SCH</fullName>
                </value>
                <value>
                    <fullName>WHS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BUSINESS_UNIT__c</fullName>
        <description>MDM Integration</description>
        <inlineHelpText>Sales channel:  ELOA, NIP, etc.</inlineHelpText>
        <label>Business Unit</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Big_C_Name__c</fullName>
        <defaultValue>&quot;Unspecified&quot;</defaultValue>
        <description>Big Customer Name defined by Finance. Populated by ELink</description>
        <inlineHelpText>Big Customer Name defined by Finance</inlineHelpText>
        <label>Big C Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Address1__c</fullName>
        <label>Billing Address1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Address2__c</fullName>
        <description>Billing Account Address Line 2</description>
        <label>Billing Address2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Address3__c</fullName>
        <description>Billing Account Address Line 3</description>
        <label>Billing Address3</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_County__c</fullName>
        <description>MDM Integration</description>
        <inlineHelpText>Billing County - MDM</inlineHelpText>
        <label>Billing County</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Povince__c</fullName>
        <description>Populated by MDM Integration</description>
        <inlineHelpText>Billing Province - MDM</inlineHelpText>
        <label>Billing Province</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Suite__c</fullName>
        <description>Populated by MDM Integration</description>
        <inlineHelpText>Billing Suite - MDM</inlineHelpText>
        <label>Billing Suite</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand_Territory_Code__c</fullName>
        <description>The code used to define the Territory</description>
        <label>Brand Territory Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Buying_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field to MBG Account record</description>
        <inlineHelpText>MBG Relationship; Master Buying Group associated with the account.</inlineHelpText>
        <label>MBG Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts (MBG)</relationshipLabel>
        <relationshipName>MBGAccount</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CBusiness_Owner1__c</fullName>
        <label>Business Owner1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CBusiness_Owner2__c</fullName>
        <label>Business Owner2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CDUNS_Number__c</fullName>
        <label>DUNS Number</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CDate_of_Business_Formation__c</fullName>
        <label>Date of Business Formation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CLegal_Entity_Name__c</fullName>
        <label>Legal Entity Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLegal_Entity_Type__c</fullName>
        <label>Legal Entity Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CNAICS_Code__c</fullName>
        <label>NAICS Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COUNTY__c</fullName>
        <description>MDM Integration</description>
        <inlineHelpText>County - MDM</inlineHelpText>
        <label>County</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Cycle_Zone__c</fullName>
        <label>Call Cycle Zone</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Segment__c</fullName>
        <defaultValue>&quot;Unspecified&quot;</defaultValue>
        <description>Customer Segment defined by Finance. Populated by ELink</description>
        <inlineHelpText>Customer Segment defined by Finance</inlineHelpText>
        <label>Customer Segment</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field to the Customer record</description>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts (Customer Name)</relationshipLabel>
        <relationshipName>CustomerAccount</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DBA__c</fullName>
        <description>MDM Integration</description>
        <inlineHelpText>DBA - MDM</inlineHelpText>
        <label>DBA</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_Not_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Do not send email blasts from Essilor; only Brand SC</description>
        <inlineHelpText>Do not send email blasts from Essilor; only Brand SC</inlineHelpText>
        <label>Do Not Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_Not_Contact_for_Ext_Marketing_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Exclude from external Mktg campaigns</description>
        <inlineHelpText>Exclude from external Mktg campaigns</inlineHelpText>
        <label>Do Not Contact for Ext Marketing Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Do_Not_Publish_Web_Referral__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Do not publish email address on referral sites</description>
        <inlineHelpText>Do not publish email address on referral sites</inlineHelpText>
        <label>Do Not Publish (Web Referral)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ENTITY_CD__c</fullName>
        <description>MDM Integration</description>
        <inlineHelpText>Entity Code - MDM</inlineHelpText>
        <label>Entity CD</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ENTITY_DESCRIPTION__c</fullName>
        <description>MDM Integration</description>
        <inlineHelpText>Lab Name - MDM</inlineHelpText>
        <label>Entity Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ENTITY_GROUP__c</fullName>
        <description>MDM Integration</description>
        <inlineHelpText>Lab Group IDD/NIP/ELOA</inlineHelpText>
        <label>Entity Group</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ENTITY_REF__c</fullName>
        <description>MDM Integration</description>
        <inlineHelpText>Integrated Lab Code _ Lab Group</inlineHelpText>
        <label>Entity Ref</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integration_ID__c</fullName>
        <description>Unique identifier for the record in the source system. . In case of composite keys, the value in this column can consist of concatenated parts. 
Internal field; Should not be exposed to end users.</description>
        <externalId>true</externalId>
        <inlineHelpText>Unique identifier for the record in the source system</inlineHelpText>
        <label>Integration ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Invoice_Name__c</fullName>
        <label>Invoice Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lab_Sales_Territory__c</fullName>
        <description>Territory code for account detail record from MDM.</description>
        <inlineHelpText>Territory code for account detail record from MDM.</inlineHelpText>
        <label>Lab Sales Territory</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Account_Number__c</fullName>
        <description>Account that each lab assigns to a customer (ECP).  The same customer may have different account numbers at different labs.</description>
        <label>Local LMS Account Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MBG_Classification__c</fullName>
        <defaultValue>&quot;UNKNOWN&quot;</defaultValue>
        <description>Provides a high level classification of the different MBG (e.g. VSP, Eyemed)
Only applicable to the &quot;Group/Alliance&apos; Record Type</description>
        <inlineHelpText>Provides a high level classification of the different MBG (e.g. VSP, Eyemed)</inlineHelpText>
        <label>MBG Classification</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MBG_Code__c</fullName>
        <label>MBG Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MBG_Segment__c</fullName>
        <formula>case( Big_C_Name__c,
&quot;VSP&quot;,&quot;VSP&quot;,
&quot;EYEMED&quot;,&quot;EYEMED&quot;,
&quot;AFFILIATE EYEMED&quot;,&quot;EYEMED&quot;,
&quot;PRIVATE PAY&quot;)</formula>
        <inlineHelpText>Managed care classification (Eyemed,VSP,PP) based on the Big C Name</inlineHelpText>
        <label>MBG Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDM_ID__c</fullName>
        <description>MDM integration</description>
        <inlineHelpText>Account ID - MDM</inlineHelpText>
        <label>MDM ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDM_Name__c</fullName>
        <label>MDM Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORACLE_ACCT_NUM__c</fullName>
        <description>MDM Integration</description>
        <inlineHelpText>Oracle Account Number - MDM</inlineHelpText>
        <label>Oracle Account Number</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Optical_Lab__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field to the Optical Lab account</description>
        <inlineHelpText>Relationship to optical lab record. Indicates the Optical Lab to which the account belongs to</inlineHelpText>
        <label>Optical Lab Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts (Optical Lab Name)</relationshipLabel>
        <relationshipName>OpticalLabAcct</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PROVINCE__c</fullName>
        <description>MDM Integration</description>
        <inlineHelpText>Province - MDM</inlineHelpText>
        <label>Province</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Lab_Channel__c</fullName>
        <description>This is the primary channel or the channel that this account does the most business with today.</description>
        <label>Primary Lab Channel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ELOA</fullName>
                </value>
                <value>
                    <fullName>IDD</fullName>
                </value>
                <value>
                    <fullName>Integrated Retail</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>ELOA/IDD</fullName>
                </value>
                <value>
                    <fullName>ELOA/Partner</fullName>
                </value>
                <value>
                    <fullName>Partner/IDD</fullName>
                </value>
                <value>
                    <fullName>No Primary</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Laboratory_Sales__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Primary Lab for actual STATS usage</description>
        <inlineHelpText>Primary Lab for actual STATS usage</inlineHelpText>
        <label>Primary Laboratory (Sales)</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Lab Account</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>STATUS__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                    <default>true</default>
                    <label>A</label>
                </value>
                <value>
                    <fullName>I</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SUITE__c</fullName>
        <description>MDM Integration</description>
        <inlineHelpText>Suite - MDM</inlineHelpText>
        <label>Suite</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Channel__c</fullName>
        <label>Sales Channel</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Laboratory_Sales__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Secondary lab for actual STATS usage</description>
        <inlineHelpText>Secondary lab for actual STATS usage</inlineHelpText>
        <label>Secondary Laboratory (Sales)</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Lab Account</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts (Secondary Laboratory (Sales))</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State_of_Business_Formation__c</fullName>
        <label>State of Business Formation</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Statement_Name__c</fullName>
        <label>Statement Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>